--- a/estilos/style.css
+++ b/estilos/style.css
@@ -40,8 +40,6 @@ iframe{
     padding: 15px;
     
 }
-
-
 nav {
     background-color: #952C87; /* Color de fondo */
 }
@@ -115,12 +113,13 @@ footer{
 
 .redes a{
     color:white;
-    font-size: 16px;
+    font-size: 10px;
     text-decoration: none;
     display: flex;
     flex-direction: row;
     align-items: center;
 }
+
 .redes img {
     width: 40px;
     height: 40px;
@@ -198,5 +197,9 @@ footer{
         height: 315px;
         margin-right: 15px;
         margin-bottom: 15px;    
+    }
+    
+    .redes a{
+        font-size: 15px;
     }
 }
